<resources>
    <string name="app_name">Fleet\nInsurance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Creating string values for the Navigation Drawer menu -->
    <string name="current_plan">My Plan</string>
    <string name="create_claim">Create a Claim</string>
    <string name="current_claim">My Current Claims</string>
    <string name="contact">Contact Us</string>
    <string name="change_plan">Change Current Plan</string>
    <string name="claimHeader">Accidents can be un-bear-able. Get it fixed up by simply submitting a picture!</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="SelectDateHint">Tap to Select Date</string>
    <string name="SelectTimeHint">Tap to Select Time</string>
    <string name="FirstName">First</string>
    <string name="LastName">Last</string>
    <string name="PlaceHolder">\???</string>
    <string name="Description">Description</string>
    <string name="CharacterCount">255/255</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EmailText">Email</string>
    <string name="Password">Password</string>
    <string name="RetypePassword">Retype Password</string>
    <string name="SignIn">Sign in</string>
    <string name="Gender">Gender</string>
    <string name="Age">Age</string>
    <string name="WelcomePlaceholder">Welcome, ???</string>
    <string name="MyPlan">My Plan</string>
    <string name="MyPlanDescription">View your current plan</string>
    <string name="MyClaims">My Claims</string>
    <string name="MyClaimsDescription">View my claims</string>
    <array name="Genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </array>
    <string name="ClaimName">Claim Name Here</string>
    <string name="Title">Title</string>
    <string name="Address">Address</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="UserName">User Name</string>

    <!-- Creating string values for the plan information. -->
    <string name="bearPlan">The Bear Package</string>
    <string name="otterPlan">Get otter \'ere!</string>
    <string name="pandaPlan">Pandamonium</string>
    <string name="catPlan">Nine Lives</string>

    <string name="bearDesc">This plan covers the bear necessities! \n\nThis basic plan covers liability
    in an auto accident. This means that the plan will protect you from the responsibility if you injure someone or something
    during an auto accident.</string>

    <string name="otterDesc">This plan is for people with a internationals driver\'s permit. \n\nUsing this plan when
    eligible, you may ignore the \'first time driver\' penalty for traveling drivers when moving in and out the country.</string>

    <string name="pandaDesc">This plan covers absolutetly anything, from earthquakes to the zombie apocolyspe! \n\nKeep your
    vehicle and the belongings inside, safe, with this cover-all plan!</string>

    <string name="catDesc">This plan will cover up to nine accidents on any current vehicle! \n\nIncludes accident forgiveness,
    collision insurance, cat-burglary and more.</string>
</resources>
