<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_planInfo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/current_plan" />
        <item
            android:id="@+id/nav_createClaim"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/create_claim" />
        <item
            android:id="@+id/nav_currentClaim"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/current_claim" />
        <item
            android:id="@+id/nav_planChange"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/change_plan" />
    </group>

    <group android:checkableBehavior="single">

        
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/contact" />

    </group>

</menu>
